--- a/Hippo/AgentSdk.storyboard
+++ b/Hippo/AgentSdk.storyboard
@@ -2303,25 +2303,61 @@
             </objects>
             <point key="canvasLocation" x="2257" y="2260"/>
         </scene>
-        <!--Saved Replies-->
-        <scene sceneID="uy4-TJ-XdC">
+        <!--Canned Replies View Controller-->
+        <scene sceneID="g3K-af-sFA">
             <objects>
-                <viewController storyboardIdentifier="CannedRepliesViewController" id="iRR-oI-mPv" customClass="CannedRepliesViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="1Fu-WM-k5E">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                <viewController storyboardIdentifier="CannedRepliesViewController" id="luP-1R-Q1V" customClass="CannedRepliesViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BAk-qA-dqj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6NB-uo-BuO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="iRR-oI-mPv" id="bnK-Sp-cmG"/>
-                                    <outlet property="delegate" destination="iRR-oI-mPv" id="HvI-RS-MX7"/>
-                                </connections>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hox-iZ-8ex">
+                                <rect key="frame" x="0.0" y="20" width="375" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaI-PW-2T2">
+                                        <rect key="frame" x="16" y="12.5" width="60" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="bHR-2I-KWj"/>
+                                            <constraint firstAttribute="width" constant="60" id="kWr-ec-nyO"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Cancel"/>
+                                        <connections>
+                                            <action selector="closeBtnAction:" destination="luP-1R-Q1V" eventType="touchUpInside" id="z6v-uJ-nao"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ee-3n-Ugs">
+                                        <rect key="frame" x="167" y="19.5" width="41.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2oH-kC-FUl">
+                                        <rect key="frame" x="0.0" y="59" width="375" height="1"/>
+                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="R7L-2G-OXI"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="2oH-kC-FUl" firstAttribute="leading" secondItem="Hox-iZ-8ex" secondAttribute="leading" id="1Hy-86-8NY"/>
+                                    <constraint firstAttribute="height" constant="60" id="8Cq-i7-nQg"/>
+                                    <constraint firstAttribute="bottom" secondItem="2oH-kC-FUl" secondAttribute="bottom" id="G6a-iV-6lI"/>
+                                    <constraint firstItem="8ee-3n-Ugs" firstAttribute="centerX" secondItem="Hox-iZ-8ex" secondAttribute="centerX" id="LJk-xD-3M2"/>
+                                    <constraint firstItem="xaI-PW-2T2" firstAttribute="leading" secondItem="Hox-iZ-8ex" secondAttribute="leading" constant="16" id="YQx-tu-1c1"/>
+                                    <constraint firstAttribute="trailing" secondItem="2oH-kC-FUl" secondAttribute="trailing" id="cz5-5B-7tJ"/>
+                                    <constraint firstItem="xaI-PW-2T2" firstAttribute="centerY" secondItem="Hox-iZ-8ex" secondAttribute="centerY" id="ntP-1b-HOC"/>
+                                    <constraint firstItem="8ee-3n-Ugs" firstAttribute="centerY" secondItem="Hox-iZ-8ex" secondAttribute="centerY" id="yvJ-Lp-zWu"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uqW-Az-70I">
+                                <rect key="frame" x="0.0" y="130" width="375" height="537"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No saved replies found!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oK1-00-30d">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -2331,45 +2367,48 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="YdB-tS-mYT">
+                                <rect key="frame" x="0.0" y="80" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="z9c-Cw-Q1c"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="luP-1R-Q1V" id="jW1-1r-NHH"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="2RP-rD-Fa0"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="eWq-0z-rdC"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2RP-rD-Fa0" firstAttribute="bottom" secondItem="oK1-00-30d" secondAttribute="bottom" id="2XU-wM-yyp"/>
-                            <constraint firstItem="2RP-rD-Fa0" firstAttribute="trailing" secondItem="6NB-uo-BuO" secondAttribute="trailing" id="5mr-mC-DOP"/>
-                            <constraint firstItem="2RP-rD-Fa0" firstAttribute="trailing" secondItem="oK1-00-30d" secondAttribute="trailing" id="Hgs-Ok-p6s"/>
-                            <constraint firstItem="oK1-00-30d" firstAttribute="leading" secondItem="2RP-rD-Fa0" secondAttribute="leading" id="HwR-sl-nnF"/>
-                            <constraint firstItem="6NB-uo-BuO" firstAttribute="top" secondItem="2RP-rD-Fa0" secondAttribute="top" id="gVB-gm-bME"/>
-                            <constraint firstItem="6NB-uo-BuO" firstAttribute="leading" secondItem="2RP-rD-Fa0" secondAttribute="leading" id="plm-bM-jEJ"/>
-                            <constraint firstItem="2RP-rD-Fa0" firstAttribute="bottom" secondItem="6NB-uo-BuO" secondAttribute="bottom" id="reQ-ig-12l"/>
-                            <constraint firstItem="oK1-00-30d" firstAttribute="top" secondItem="2RP-rD-Fa0" secondAttribute="top" id="zaJ-tY-2eU"/>
+                            <constraint firstItem="eWq-0z-rdC" firstAttribute="trailing" secondItem="Hox-iZ-8ex" secondAttribute="trailing" id="2gR-cQ-23C"/>
+                            <constraint firstItem="uqW-Az-70I" firstAttribute="top" secondItem="YdB-tS-mYT" secondAttribute="bottom" id="5hr-Ma-u5E"/>
+                            <constraint firstItem="YdB-tS-mYT" firstAttribute="trailing" secondItem="eWq-0z-rdC" secondAttribute="trailing" id="9vg-hQ-Nax"/>
+                            <constraint firstItem="YdB-tS-mYT" firstAttribute="leading" secondItem="eWq-0z-rdC" secondAttribute="leading" id="E7W-rf-eIo"/>
+                            <constraint firstAttribute="bottom" secondItem="oK1-00-30d" secondAttribute="bottom" id="N9X-wN-he9"/>
+                            <constraint firstItem="oK1-00-30d" firstAttribute="top" secondItem="Hox-iZ-8ex" secondAttribute="bottom" id="Xc8-p8-yuq"/>
+                            <constraint firstItem="Hox-iZ-8ex" firstAttribute="top" secondItem="eWq-0z-rdC" secondAttribute="top" id="bdf-Gn-LnB"/>
+                            <constraint firstItem="eWq-0z-rdC" firstAttribute="bottom" secondItem="uqW-Az-70I" secondAttribute="bottom" id="fSg-5n-ul6"/>
+                            <constraint firstItem="eWq-0z-rdC" firstAttribute="trailing" secondItem="uqW-Az-70I" secondAttribute="trailing" id="kda-AE-dRn"/>
+                            <constraint firstItem="Hox-iZ-8ex" firstAttribute="leading" secondItem="eWq-0z-rdC" secondAttribute="leading" id="ln4-jH-mZZ"/>
+                            <constraint firstItem="YdB-tS-mYT" firstAttribute="top" secondItem="Hox-iZ-8ex" secondAttribute="bottom" id="nZ7-yT-1aJ"/>
+                            <constraint firstItem="uqW-Az-70I" firstAttribute="leading" secondItem="eWq-0z-rdC" secondAttribute="leading" id="qDK-mL-CFA"/>
+                            <constraint firstItem="oK1-00-30d" firstAttribute="leading" secondItem="eWq-0z-rdC" secondAttribute="leading" id="qKT-1R-rWc"/>
+                            <constraint firstAttribute="trailing" secondItem="oK1-00-30d" secondAttribute="trailing" id="xVM-la-w5C"/>
                         </constraints>
                     </view>
-                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <navigationItem key="navigationItem" title="Saved Replies" id="IiE-SM-ZA0">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="17F-4J-1Uq">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <connections>
-                                <action selector="closeBtnAction:" destination="iRR-oI-mPv" id="O79-5b-yPs"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="kdH-6n-EBq">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <connections>
-                                <action selector="searchBtnAction:" destination="iRR-oI-mPv" id="R18-kA-tly"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
-                        <outlet property="noSavedRepliesLabel" destination="oK1-00-30d" id="Jth-DB-U7O"/>
-                        <outlet property="searchBarButton" destination="kdH-6n-EBq" id="zZr-eK-ALs"/>
-                        <outlet property="tableViewCannedMessage" destination="6NB-uo-BuO" id="TSj-Ll-dA2"/>
+                        <outlet property="bgView" destination="Hox-iZ-8ex" id="nFi-UT-Xdv"/>
+                        <outlet property="cancelBarButton" destination="xaI-PW-2T2" id="xDb-Hs-mex"/>
+                        <outlet property="noSavedRepliesLabel" destination="oK1-00-30d" id="O3H-mJ-YXx"/>
+                        <outlet property="searchBar" destination="YdB-tS-mYT" id="jPm-3C-roo"/>
+                        <outlet property="tableViewCannedMessage" destination="uqW-Az-70I" id="toR-Uj-GIc"/>
+                        <outlet property="titleLbl" destination="8ee-3n-Ugs" id="NmZ-If-xjq"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OjD-Js-kBR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LH5-kz-JyF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3286" y="122"/>
+            <point key="canvasLocation" x="2973.5999999999999" y="-575.26236881559225"/>
         </scene>
     </scenes>
     <resources>
@@ -2387,6 +2426,9 @@
         <image name="tag" width="20" height="20"/>
         <image name="tick_green" width="42.5" height="42.5"/>
         <image name="whiteBackButton" width="8" height="12"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
