--- a/Hippo/UIView/TableViewCell/AudioFileCell/OutgoingAudioTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/AudioFileCell/OutgoingAudioTableViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,14 +13,14 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="112.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="480" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SLL-7B-QGi">
-                        <rect key="frame" x="220" y="5" width="250" height="104.5"/>
+                        <rect key="frame" x="220" y="5" width="250" height="105"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Ic1-Mf-yX1">
-                                <rect key="frame" x="5" y="5" width="240" height="94.5"/>
+                                <rect key="frame" x="5" y="5" width="240" height="95"/>
                                 <subviews>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="daj-SV-Slx">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="0.0"/>
@@ -28,39 +29,39 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="4ad-8m-9vv">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="82.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="83"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AudioIcon" translatesAutoresizingMaskIntoConstraints="NO" id="LX4-ys-MnO">
-                                                <rect key="frame" x="0.0" y="33.5" width="34" height="16"/>
+                                                <rect key="frame" x="0.0" y="31" width="34" height="21.333333333333329"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="34" id="aW1-IS-4Tv"/>
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UXl-Vd-Wky">
-                                                <rect key="frame" x="39" y="0.0" width="156" height="82.5"/>
+                                                <rect key="frame" x="39" y="0.0" width="156" height="83"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVk-HV-9xq">
-                                                        <rect key="frame" x="5" y="23" width="146" height="14.5"/>
+                                                        <rect key="frame" x="5" y="23.333333333333336" width="146" height="14.333333333333336"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qon-Nl-TA5">
-                                                        <rect key="frame" x="5" y="40.5" width="146" height="2"/>
+                                                        <rect key="frame" x="5" y="40.666666666666664" width="146" height="2"/>
                                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="2" id="C8f-Dp-aA7"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YJz-cT-i9F">
-                                                        <rect key="frame" x="5" y="39.5" width="0.0" height="4"/>
+                                                        <rect key="frame" x="5" y="39.666666666666664" width="0.0" height="4"/>
                                                         <color key="backgroundColor" red="0.1333333333" green="0.58823529409999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" id="MUh-eJ-LTx"/>
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="cqa-7f-hfg">
-                                                        <rect key="frame" x="5" y="47.5" width="146" height="12"/>
+                                                        <rect key="frame" x="5" y="47.666666666666664" width="146" height="12"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-:--" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fxi-3K-fJa">
                                                                 <rect key="frame" x="0.0" y="0.0" width="73" height="12"/>
@@ -94,7 +95,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tBV-N9-waI">
-                                                <rect key="frame" x="200" y="21.5" width="40" height="40"/>
+                                                <rect key="frame" x="200" y="21.666666666666671" width="40" height="40"/>
                                                 <subviews>
                                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VjL-DO-byw">
                                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -102,7 +103,7 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hC7-jf-MYW">
                                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" image="downloadIcon">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <color key="titleShadowColor" white="0.29076450892857142" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -135,19 +136,19 @@
                                         </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AAg-Ih-EP4">
-                                        <rect key="frame" x="0.0" y="82.5" width="240" height="12"/>
+                                        <rect key="frame" x="0.0" y="83" width="240" height="12"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kH5-fN-sW5">
-                                                <rect key="frame" x="173" y="0.0" width="62" height="12"/>
+                                                <rect key="frame" x="173.66666666666669" y="0.0" width="61.333333333333343" height="12"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HBU-ap-GOr">
-                                                        <rect key="frame" x="0.0" y="0.0" width="42" height="12"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="12"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unsent_watch_icon" translatesAutoresizingMaskIntoConstraints="NO" id="UI9-hJ-hnl">
-                                                        <rect key="frame" x="47" y="0.0" width="15" height="12"/>
+                                                        <rect key="frame" x="46.333333333333314" y="0.0" width="15" height="12"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="12" id="Akg-71-5Hz"/>
                                                             <constraint firstAttribute="width" constant="15" id="S67-Ti-mJa"/>
@@ -188,7 +189,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="70b-7s-CUe">
-                        <rect key="frame" x="176" y="35.5" width="44" height="44"/>
+                        <rect key="frame" x="176" y="35.666666666666664" width="44" height="43.999999999999993"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddb-oj-HNX">
                                 <rect key="frame" x="7" y="7" width="30" height="30"/>
@@ -250,8 +251,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="AudioIcon" width="21" height="21"/>
-        <image name="downloadIcon" width="21" height="21"/>
-        <image name="unsent_watch_icon" width="13" height="12.5"/>
+        <image name="AudioIcon" width="21.333333969116211" height="21.333333969116211"/>
+        <image name="downloadIcon" width="21.333333969116211" height="21.333333969116211"/>
+        <image name="unsent_watch_icon" width="13" height="12.333333015441895"/>
     </resources>
 </document>
